--- a/src/bkgd_gold.css
+++ b/src/bkgd_gold.css
@@ -17,7 +17,7 @@
 
 .playerOptionBox {
   background-color: #fff0;
-  border: 1px solid #830;
+  border: 1px solid #830;     /* done */
 }
 
 .letter_eliminated {
