--- a/src/App.css
+++ b/src/App.css
@@ -332,7 +332,7 @@ div:focus {
 
 .GoldTheme .App {
   background-color: #fc0; 
-  color: #830;     
+  color: #830;
 }
 
 .GoldTheme .RightFrame:after {
@@ -728,4 +728,78 @@ div:focus {
 
 .PinkTheme #fox {
   stroke: #705;
+}
+
+
+@media (max-width: 600px) {
+
+  .App {
+    align-items: center;
+    background-color: #000;
+    /* border: 5px solid #000; */
+    display: grid;
+    grid-template-rows: 75% 25%;
+    height: 100vh;
+    justify-content: center;
+    min-height: 98vh;
+    text-align: center;
+    width: 100vw;
+  }
+
+  .LeftFrame {
+    /* background-color: #f002; */
+    /* border: 1px dashed red; */
+    font-size: 10vw;
+    height: 100%;
+    width: 100%;
+    min-height: auto;
+    min-width: auto;
+    grid-row: 1 / 2;
+    grid-column: 1 / 6;
+  }
+
+  .RightFrame {
+    /* background-color: #0f02; */
+    /* border: 1px dashed blue; */
+    display: flex;
+    height: 100%;
+    width: 100%;
+    min-height: auto;
+    min-width: auto;
+    grid-row: 2 / 3;
+    grid-column: 1 / 6;
+  }
+
+  #start-menu-container {
+    /* background-color: #ff00ff0f; */
+    display: grid;
+    font-weight: 600;
+    grid-template-columns: repeat(6, auto);
+    /* background-color: #f001; */
+    height: 100%;
+    width: 100%;
+  }
+
+  #fox {
+    /* border: 1px dashed blue; */
+    height: 20vh;
+    width: auto;
+  }
+
+  #scratchpad-container {
+    /* border: 1px dashed #00f; */
+    height: 20vh;
+  }
+
+
+
+  .GoldTheme .App {
+    background-color: #fc0; 
+    color: #830;
+  }
+  
+  .GoldTheme .RightFrame:after {
+    background: #8300;
+  }
+
 }
