--- a/src/App.css
+++ b/src/App.css
@@ -268,7 +268,7 @@ div:focus {
 
 #fox {
   /* background-color: #00f2; */
-  border: 2px dashed #00f1;
+  /* border: 2px dashed #00f1; */
   height: 20vw;
   width: 20vw;
   margin: auto;
@@ -277,13 +277,13 @@ div:focus {
 #scratchpad-container {
   align-items: center;
   /* background-color: #0f02; */
-  border: 2px dashed #00f1;
+  /* border: 2px dashed #00f1; */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: repeat(6, 1fr);
   height: 20vw;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 20px;
   width: 20vw;
 }
 
@@ -330,10 +330,10 @@ div:focus {
 
 #save-button {
   align-items: center;
-  border: 2px dashed #00f1;
+  /* border: 2px dashed #00f1; */
   font-size: 1.4vw;
   margin: auto;
-  margin-top: 10px;
+  margin-top: 30px;
   width: 20vw;
 }
 
