--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 
 .LeftFrame {
   /* background-color: #f003; */
-  font-size: 72px;
+  font-size: 60px;
   height: 100%;
   min-height: 100vh;
   align-items: center;
@@ -44,7 +44,7 @@
 #start-menu-container {
   display: grid;
   font-weight: 600;
-  grid-template-rows: repeat(6, auto);
+  grid-template-rows: repeat(7, auto);
   /* background-color: #f001; */
   height: 100%;
   width: 100%;
@@ -52,27 +52,39 @@
 
 #start-menu-top-blank {
   grid-row: 1 / 2;
+  /* border: 3px dashed green; */
 }
 
 #start-menu-1 {
   /* background-color: #0f02; */
   grid-row: 2 / 3;
+  /* border: 3px dashed red; */
 }
 
-#start-menu-2 {
+#start-menu-resume {
+  /* background-color: #0f02; */
   grid-row: 3 / 4;
+  /* border: 3px dashed yellow; */
+}
+
+#start-menu-load {
+  grid-row: 4 / 5;
+  /* border: 3px dashed brown; */
 }
 
 #start-menu-how-to-play-button {
-  grid-row: 4 / 5;
+  grid-row: 5 / 6;
+  /* border: 3px dashed blue; */
 }
 
 #start-menu-options-button {
-  grid-row: 5 / 6;
+  grid-row: 6 / 7;
+  /* border: 3px dashed white; */
 }
 
 #start-menu-bottom-blank {
-  grid-row: 6 / 7;
+  grid-row: 7 / 8;
+  /* border: 3px dashed green;  */
 }
 
 #ai-menu-container {
@@ -192,6 +204,7 @@
 
 #game {
   /* background-color: #0f04; */
+  display: block;
   font-size: 12pt;
   font-weight: 700;
   height: 100%;
@@ -358,6 +371,19 @@ div:focus {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+input {
+  background-color: #0000;
+  border: 0px solid #0001;
+  color: #830;
+  font-family: 'Segoe UI';
+  font-size: 12pt;
+  font-weight: 700;
+  margin: 0px;
+  outline: none;
+  padding: 0px;
+  text-align: center;
 }
 
 
@@ -592,6 +618,10 @@ a {
   color: #ffc;
 }
 
+.GreenTheme input {
+  color: #ffc;
+}
+
 .GreenTheme .playerOptionBox {
   background-color: #fff0;
   border: 1px solid #ffc;
@@ -778,18 +808,7 @@ a {
   stroke: #705;
 }
 
-input {
-  background-color: #0000;
-  border: 0px solid #0001;
-  color: #830;
-  font-family: 'Segoe UI';
-  font-size: 12pt;
-  font-weight: 700;
-  margin: 0px;
-  outline: none;
-  padding: 0px;
-  text-align: center;
-}
+
 
 
 
